fix two columns on mobile

--- a/resources/css/scss/sections/_content.scss
+++ b/resources/css/scss/sections/_content.scss
@@ -41,7 +41,9 @@
     }
 
     .text_columns {       
-        flex-direction: column;
+        @include media (max-width, 768px){
+            flex-direction: column !important;
+        }
     }
 
 }
